--- a/CouchBaseStorage/CouchBaseProviders.csproj
+++ b/CouchBaseStorage/CouchBaseProviders.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="CouchBaseProviders.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
